msdkvpp: deprecate mirror and rotation and use video-direction
msdkvpp wrongly added a rotation property when video-direction property is commonly used in gstreamer. rotation shall be marked as deprecated and add video-direction
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
msdkvpp wrongly added a rotation property when video-direction property is commonly used in gstreamer. rotation shall be marked as deprecated and add video-direction
cc: @haihao
@vjaquez Thanks for filing this issue, I will make a patch for it.
FYI, we just recently implemented video-direction in vaapipostproc (gstreamer-vaapi). You might be able to use it as a reference. And videoflip element did a similar "deprecation" which you can use for reference, too. Hope it's helpful.
@ullysses.a.eoff Thanks for the info.
mentioned in commit haihao/gst-plugins-bad@bf42832d
mentioned in merge request !646 (merged)
mentioned in commit haihao/gst-plugins-bad@c4ba8b69
mentioned in commit haihao/gst-plugins-bad@d5fd9bc2
closed via commit d5fd9bc2
mentioned in commit haihao/gst-plugins-bad@75630b28